// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToListModal multiple works as input 1`] = `
<div
  className="modal-container"
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window text-left add-to-list--modal"
  >
    <img
      alt="luk"
      className="modal-window--close-btn"
      onClick={[Function]}
      src="Kryds.svg"
    />
    <div
      className="modal-window--header text-center"
    >
      <h3>
        GEM I LISTE
      </h3>
    </div>
    <div
      className="modal-window--content"
    >
      <div
        className="row"
      >
        <strong
          className="col-xs-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center"
                type="hidden"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-xs-6"
        >
          <p
            className="mt2"
          >
            Du er ved at gemme 2 bøger i 'title1'
          </p>
        </div>
      </div>
    </div>
    <div
      className="modal-window--buttons text-center"
    >
      <span
        className="btn btn-success"
        onClick={[Function]}
      >
        JA TAK, GEM NU
      </span>
    </div>
  </div>
</div>
`;

exports[`AddToListModal newly added list is selected 1`] = `
<div
  className="modal-container"
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window text-left add-to-list--modal"
  >
    <img
      alt="luk"
      className="modal-window--close-btn"
      onClick={[Function]}
      src="Kryds.svg"
    />
    <div
      className="modal-window--header text-center"
    >
      <h3>
        GEM I LISTE
      </h3>
    </div>
    <div
      className="modal-window--content"
    >
      <div
        className="row"
      >
        <strong
          className="col-xs-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title3-2"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title3-2"
              >
                title3
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center"
                type="hidden"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-xs-6"
        >
          <WorkItemSmall
            work={
              Object {
                "book": Object {
                  "creator": "some creator1",
                  "pid": "pid1",
                  "taxonomy_description": "some taxonomy_description1",
                  "title": "some title1",
                },
                "description": "some description1",
                "links": Object {
                  "cover": "/cover1",
                },
              }
            }
          />
          <textarea
            className="comment"
            onChange={[Function]}
            placeholder="Skriv evt. en kommentar til bogen"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="modal-window--buttons text-center"
    >
      <span
        className="btn btn-success"
        onClick={[Function]}
      >
        JA TAK, GEM NU
      </span>
    </div>
  </div>
</div>
`;

exports[`AddToListModal renders lists from store, first is selected 1`] = `
<div
  className="modal-container"
>
  <div
    className="modal-backdrop"
    onClick={[Function]}
  />
  <div
    className="modal-window text-left add-to-list--modal"
  >
    <img
      alt="luk"
      className="modal-window--close-btn"
      onClick={[Function]}
      src="Kryds.svg"
    />
    <div
      className="modal-window--header text-center"
    >
      <h3>
        GEM I LISTE
      </h3>
    </div>
    <div
      className="modal-window--content"
    >
      <div
        className="row"
      >
        <strong
          className="col-xs-12"
        >
          Hvilken liste vil du gemme i?
        </strong>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-6"
        >
          <div
            className="list-overview"
          >
            <div>
              <input
                checked={false}
                id="radio-title1-0"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title1-0"
              >
                title1
              </label>
            </div>
            <div>
              <input
                checked={false}
                id="radio-title2-1"
                name="list"
                onChange={[Function]}
                type="radio"
              />
              <label
                htmlFor="radio-title2-1"
              >
                title2
              </label>
            </div>
          </div>
          <div
            className="add-list"
          >
            <form
              onSubmit={[Function]}
            >
              <input
                className=""
                name="add-list"
                onChange={[Function]}
                placeholder="Opret ny liste"
                type="text"
                value=""
              />
              <input
                className="add-list--btn text-center"
                type="hidden"
                value="×"
              />
            </form>
          </div>
        </div>
        <div
          className="col-xs-6"
        >
          <WorkItemSmall
            work={
              Object {
                "book": Object {
                  "creator": "some creator1",
                  "pid": "pid1",
                  "taxonomy_description": "some taxonomy_description1",
                  "title": "some title1",
                },
                "description": "some description1",
                "links": Object {
                  "cover": "/cover1",
                },
              }
            }
          />
          <textarea
            className="comment"
            onChange={[Function]}
            placeholder="Skriv evt. en kommentar til bogen"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      className="modal-window--buttons text-center"
    >
      <span
        className="btn btn-success"
        onClick={[Function]}
      >
        JA TAK, GEM NU
      </span>
    </div>
  </div>
</div>
`;
